<resources>
    <string name="app_name">Club deportivo</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="usuario_admin">Usuario Administrador</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="buscar_socio">Buscar socio</string>
    <string name="registrar">Registrar</string>
    <string name="pagosString">Pagos</string>
    <string name="pagoMensual">Pago\nMensual</string>
    <string name="pagoDiario">Pago\nDiario</string>
    <string name="pagarCuotaMensual">Pagar Cuota Mensual</string>
    <string name="listados">Listados</string>
    <string name="logo">Logo</string>
    <string name="volver">Volver</string>
    <string name="volverInicio">Ir a inicio</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="cuotas">Cuotas:</string>
    <string name="pagar">Pagar</string>
    <string name="ingresarDNI">Ingresar DNI</string>
    <string name="ingresarMonto">Ingresar Monto</string>
    <string name="montoString">Monto</string>
    <string name="metodoPago">Método de Pago</string>
    <string name="metodoPagoElegido">Tarjeta</string>
    <string name="comprobantePagoMensual">Comprobante de Pago Mensual</string>
    <string name="impComprobantePagoMensual">Imprimir comprobante</string>
    <string name="pagoExitoso">Pago exitoso</string>
    <string name="ubicacionTitulo">Ubicación:</string>
    <string name="ubicacion">Rosario, SF, Argentina</string>
    <string name="cliente">Cliente:</string>
    <string name="clienteNombre">Marcelo Ortega\n23.456.467</string>
    <string name="fechaEmision">Fecha de emisión:</string>
    <string name="emisionPago">Lunes, 01 de septiembre de 2025</string>
    <string name="vencimiento">Vencimiento:</string>
    <string name="vencimientoCuota">Cuota con vencimiento: 01 de octubre de 2025</string>
    <string name="montoFinal">Monto final:</string>
    <string name="montoNro">$30.000</string>
    <string name="comprobanteNro">Comprobante de pago #XXXX</string>

    <!-- títulos de Listados -->
    <string name="socios_vencidos">Socios Vencidos</string>
    <string name="listado_socios">Listado Socios</string>
    <string name="listado_no_socios">Listado No socios</string>

    <!-- títulos de Socios vencidos -->
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fechaNac">Fecha de nacimiento</string>
    <string name="dni">DNI</string>
    <string name="estado">Estado</string>
    <string name="fecha_inscripcion">Fecha Inscripción</string>
    <string name="ultimo_vencimiento">Último vencimiento</string>"
    <string name="ir_a_pagos">Ir a pagos</string>

    <string name="seleccionarActividad">Seleccionar actividad</string>
    <string name="actividad">Actividad</string>

</resources>
